class/method find now takes less time, 'orderBy' keyword added to 'all' requests, method invocation exception handled, 'clearKeyValuePairs' method converts the value objects to expected types, paramList removed from ParamMap